Streaming/YAMLs/server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: gcr.io/duosoundmonolithic/server:v2
        ports:
        - containerPort: 2000
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: NodePort
  selector:
    app: server
  ports:
  - port: 2000
    targetPort: 2000
